2007-11-01  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Fix the testsuite to preserve the various arguments of configure.
	* build-aux/boost.m4 (BOOST_REQUIRE): Define
	DISTCHECK_CONFIGURE_FLAGS to automatically preserve the --with-boost
	argument.
	* configure.ac: Use AC_CANONICAL_HOST.
	(AC_CONFIG_FILES): Generate tests/package.m4.
	* tests/Makefile.am (EXTRA_DIST, $(TESTSUITE)): Adjust.
	No longer need to generate package.m4 since it's now generated from
	package.m4.in.
	* tests/atlocal.in (CXX, LD, CONFIGURE_FLAGS, build, host): New.
	* tests/package.m4.in: New.
	* tests/testsuite.at: Invoke configure with the proper flags (that
	is, preserve the original configuration).

2007-11-01  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add a README.
	* README: New.
	* build-aux/boost.m4: Advertise the Git repository.

2007-11-01  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Fix the detection of the toolset name for GCC.
	* build-aux/boost.m4 (_BOOST_gcc_test): New internal helper.
	(_BOOST_FIND_COMPILER_TAG): Use _BOOST_gcc_test to take into account
	the minor version number of GCC into the toolset name.
	* configure.ac: Invoke _BOOST_FIND_COMPILER_TAG to warn earlier
	about unknown toolsets.

2007-11-01  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add a test for Boost.Variant.
	* build-aux/boost.m4 (BOOST_VARIANT): New.
	* tests/testsuite.at: Test the new macro.

2007-11-01  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add tests for Boost.Format and Boost.Utility.
	* build-aux/boost.m4 (BOOST_FORMAT, BOOST_UTILITY): New.
	* tests/testsuite.at: Test the new macros.

2007-11-01  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add a check for Boost.Conversion.
	* build-aux/boost.m4 (BOOST_CONVERSION): New.
	* tests/testsuite.at: Add a test for the new macro.

2007-11-01  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add a check for Boost.Filesystem.
	* build-aux/boost.m4 (BOOST_FILESYSTEM): New.
	* tests/testsuite.at: Add a test for the new macro.

2007-11-01  Benoit Sigoure  <tsuna@lrde.epita.fr>
