@@ -254,6 +254,6 @@ AT_CHECK_MACRO([BOOST_VARIANT])
 
 AT_BANNER([Boost libraries])
 
-AT_CHECK_MACRO([BOOST_FILESYSTEM])
+AT_CHECK_MACRO_CROSS([BOOST_FILESYSTEM])
 AT_CHECK_MACRO([BOOST_GRAPH])
-AT_CHECK_MACRO_CROSS([BOOST_THREADS])
+AT_CHECK_MACRO([BOOST_THREADS])
